# winter

./: CLAUDE.md  README.md
tools/winter-cli/: pyproject.toml
tools/winter-cli/schemas/: ws-status-v1.json
tools/winter-cli/src/winter_cli/: cli.py  container.py  util.py
tools/winter-cli/src/winter_cli/config/: models.py  overlay.py  workspace.py
tools/winter-cli/src/winter_cli/core/: filesystem.py
tools/winter-cli/src/winter_cli/plugins/: loader.py  types.py
tools/winter-cli/tests/: conftest.py  test_cli.py  test_dashboard_error_capture.py  test_error_log.py  test_service_doc_matches_spec.py  test_write_repo_repository.py
tools/winter-cli/tests/config/: test_workspace_config_service.py
tools/winter-cli/tests/conventions/: conftest.py  test_no_catch_log_rethrow.py  test_no_whole_config_injection.py  test_protocol_naming.py  test_service_based_behavior.py
tools/winter-cli/tests/conventions/fixtures/: violating_no_catch_log_rethrow.py  violating_no_whole_config_injection.py  violating_protocol_naming.py  violating_service_based_behavior.py
tools/winter-cli/tests/modules/capability/: test_capability_registry_service.py  test_capability_reporter.py  test_spec_loader.py  test_version_compat.py
tools/winter-cli/tests/modules/doctor/: test_agents_md_probe_service.py  test_capability_probe_service.py  test_core_probe_service.py  test_skill_probe_service.py
tools/winter-cli/tests/modules/ext/: test_resolve_output_dir.py  test_scaffold_service.py  test_verify_cli_exit_codes.py  test_verify_reporter.py  test_verify_service.py
tools/winter-cli/tests/modules/lint/: test_core_lint_service.py  test_lint_handler.py  test_lint_service.py  test_required_services_check.py  test_scope_resolver.py
tools/winter-cli/tests/modules/provision/: test_provision_dry_run.py  test_provision_execution_service.py  test_provision_manifest_parser.py  test_provision_manifest_probe_service.py  test_provision_service.py  test_provision_service_check.py
tools/winter-cli/tests/modules/service/: test_describe_parser.py  test_env_file_sourcer.py  test_handler.py  test_help_matches_spec.py  test_orchestrator_resolver.py  test_phase4_routing.py  test_service_catalog_service.py  test_service_dispatch_service.py  test_service_fan_out_service.py  test_service_logs_service.py  test_service_provider_index.py  test_service_readiness_service.py  (+2 more)
tools/winter-cli/tests/plugins/: test_loader.py  test_types.py
(+211 files in other folders)
