[project]
name = "winter-cli"
version = "0.1.0"
description = "Workspace management CLI for the winter framework."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "dependency-injector>=4.41.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomlkit>=0.13.0",
    "textual>=0.80.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/winter_cli"]

[project.scripts]
winter = "winter_cli.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
