[project]
name = "winter-cli"
version = "0.1.0"
description = "Workspace management CLI for the winter framework."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "dependency-injector>=4.41.0",
    "tomlkit>=0.13.0",
    "textual>=0.80.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/winter_cli"]

[project.scripts]
winter = "winter_cli.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "pyright>=1.1.380",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# cli.py sets sys.pycache_prefix before importing click and winter_cli.* so
# their bytecode lands under the redirected cache (and never scribbles
# __pycache__ into plugin extension source trees) — that ordering is
# load-bearing, so E402 doesn't apply.
"src/winter_cli/cli.py" = ["E402"]
# Tests use loose patterns: long assertion messages and fixture functions
# whose names shadow imports. (When `S` is enabled later, also ignore
# S101 — `assert` is fine in tests.)
"tests/*" = ["E501", "B008"]
